--- a/Ocean.Inside.Project/Views/Tour/_GroupTourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/_GroupTourItem.cshtml
@@ -3,7 +3,7 @@
 
 <div class="cell-xs-10 cell-sm-6 cell-lg-12 offset-lg-top-15">
     <div class="box-offer box-offer-sm box-offer-left">
-        <div class="box-offer-img-wrap"><a href="@Url.Action("GroupTour", "Tour", new { id = Model.Id })"><img src="@Model.CoverImage.Path" alt="" class="img-responsive center-block image-group-tours"></a></div>
+        <div class="box-offer-img-wrap"><a href="@Url.Action("GroupTour", "Tour", new { id = Model.Id })"><img src="@Model.CoverImage.Path" alt="@Model.Title" class="img-responsive center-block image-group-tours"></a></div>
         <div class="box-offer-caption text-left">
             <div class="box-offer-caption-inner-wrap">
                 <div class="box-offer-caption-inner-left">
