--- a/Ocean.Inside.Project/Views/Shared/_CallBox.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_CallBox.cshtml
@@ -11,7 +11,7 @@
                     <div class="shell">
                         <div class="range range-xs-center range-xs-middle">
                             <div class="cell-sm-6 offset-top-20 bg-image bg-image-1">
-                                <img src="@Url.Content($"/images/Layout/phone.png")" height="300" width="200" alt="" class="img-responsive center-block">
+                                <img src="@Url.Content($"/images/Layout/phone.png")" height="300" width="200" alt="phone" class="img-responsive center-block">
                             </div>
                             <div class="cell-sm-6">
                                 <div class="modal-body-column-content">
