improvements after a long time

--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-11-20x18.png" width="20" height="18" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-11-20x18.png" width="20" height="18" alt="icon" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -50,7 +50,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-06-14x21.png" width="14" height="21" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-06-14x21.png" width="14" height="21" alt="award" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -67,7 +67,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-07-21x18.png" width="21" height="18" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-07-21x18.png" width="21" height="18" alt="like" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -84,7 +84,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-08-17x19.png" width="17" height="19" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-08-17x19.png" width="17" height="19" alt="people" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -101,7 +101,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-09-20x20.png" width="20" height="20" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-09-20x20.png" width="20" height="20" alt="award" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -118,7 +118,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-10-25x24.png" width="25" height="24" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-10-25x24.png" width="25" height="24" alt="internet" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -158,7 +158,7 @@
                         {
                             <div class="owl-item" id="@testimonialViewModel.Id">
                                 <div class="team-member">
-                                    <div class="team-member-img-wrap"><img src="@testimonialViewModel.PhotoUrl" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                    <div class="team-member-img-wrap"><img src="@testimonialViewModel.PhotoUrl" width="100" height="100" alt="@testimonialViewModel.Name" class="img-circle img-responsive center-block"></div>
                                     <div class="team-member-body">
                                         <div class="offset-top-20">
                                             <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">@testimonialViewModel.Name</div>
