--- a/Ocean.Inside.Project/Views/Home/_HotelTourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Home/_HotelTourItem.cshtml
@@ -23,6 +23,8 @@
                     <li>@Model.Place</li>
                     <li>@Model.Duration дней /@Model.DurationNights ночей</li>
                     <li>Вылет: @Model.FlyFrom</li>
+                    <li>Дата начала: @(Model.StartDate.ToString("D"))</li>
+                    <li><h6>Отель: @(Model.Hotel)</h6></li>
                 </ul>
             </div>
         </div>
