--- a/Ocean.Inside.Project/Views/Home/About.cshtml
+++ b/Ocean.Inside.Project/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
                     <h3>7 плюсов работать с нами</h3>
                     <div class="offset-top-15">
                         <ul class="list-group">
-                            <li>+ Мы организуем рупповые туры</li>
+                            <li>+ Мы организуем групповые туры</li>
                             <li>+ Офис в центре города</li>
                             <li>+ Официально (договор + чек)</li>
                             <li>+ Работаем с крупнейшими туроператорами <br />(возможность сравнить и выбрать лучшие предложения)</li>
@@ -84,10 +84,10 @@
                     </div>
                     <div class="owl-item">
                         <div class="team-member">
-                            <div class="team-member-img-wrap team-member-img-wrap-border-darker"><img src="/images/About/Maria_mini.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                            <div class="team-member-img-wrap team-member-img-wrap-border-darker"><img src="/images/About/Irina.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                             <div class="team-member-body">
                                 <div class="offset-top-20">
-                                    <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Пригодская Мария</div>
+                                    <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Сидоренко Ирина</div>
                                 </div>
                                 <div class="offset-top-8">
                                     <div class="team-member-description text-spacing-300 text-italic text-uppercase text-silver-chalice">Менеджер</div>
@@ -96,7 +96,7 @@
                                     <p class="text-small text-italic text-silver-chalice">
                                         Если вы проснулись утром и поняли - отпуск необходим,
                                         позвоните нашему менеджеру и она подберёт вам отличный вариант! Любовь к путешествиям и своей работе делает
-                                        из Марии отличного специалиста в данной сфере! Визовая поддержка, подбор тура, планирование путешествия...
+                                        из Ирины отличного специалиста в данной сфере! Визовая поддержка, подбор тура, планирование путешествия...
                                         со всеми этими вопросами вы всегда можете обратиться к нам и получить консультацию!
                                     </p>
                                 </div>
