--- a/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <meta name="Description" content="Туры и путешествия с компанией Океан Внутри, групповые и пакетные туры"/>
-    
-    @RenderSection("AdditionalMeta", false)
-    
+    <meta name="Description" content="Туры и путешествия с компанией Океан Внутри, групповые и пакетные туры. Вылеты из Минска и Киева! Актуальные даты туров!" />
+
+    @Styles.Render("~/bundles/styles")
+
+    @Scripts.RenderFormat(@"<script src=""{0}"" async></script>", "~/bundles/scripts")
+
     <!-- Google Analytics -->
     <script>
-        (function(i, s, o, g, r, a, m) {
+        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] ||
-                function() {
+                function () {
                     (i[r].q = i[r].q || []).push(arguments);
                 }, i[r].l = 1 * new Date();
             a = s.createElement(o),
@@ -32,16 +34,27 @@
     <!-- End Google Analytics -->
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/css/css.css?family=Lato:400,400i,700,700i,900,900i">
-    <link rel="stylesheet" href="/css/style.css">
 
-    <link rel="stylesheet" href="/css/custom_styles.css">
-
-    <script type="text/javascript" src="//vk.com/js/api/openapi.js?146"></script>
+    @Scripts.RenderFormat(@"<script src=""{0}""></script>", "~/bundles/vkapi")
 
     <script type="text/javascript">
         VK.init({ apiId: 6125031, onlyWidgets: true });
     </script>
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Океанвнутри">
+    <meta property="og:description" content="Туры и путешествия с компанией Океан Внутри, групповые и пакетные туры. Вылеты из Минска и Киева!">
+    <meta property="og:url" content="okeanvnutry.by">
+    <meta property="og:image" content="http://okeanvnutry.by/images/Layout/logo.png">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="&#64;ValodzVysotski">
+    <meta name="twitter:title" content="Океан внутри">
+    <meta name="twitter:description" content="Туры и путешествия с компанией Океан Внутри, групповые и пакетные туры. Вылеты из Минска и Киева!">
+    <meta name="twitter:image" content="http://okeanvnutry.by/images/Layout/logo.png">
+    <meta name="twitter:image:alt" content="океанвнутри">
+
+    <link rel="publisher" href="https://plus.google.com/+UladzimirVysotski">
 </head>
 <body>
     <div class="page text-center">
@@ -69,8 +82,8 @@
                                     @Html.ActionLink("Галерея", "Index", "Gallery")
                                 </li>
                                 @*<li class='@Html.IsActive("Home", "Index")'>
-                                    @Html.ActionLink("Блог", "Index", "Home")
-                                </li>*@
+                                        @Html.ActionLink("Блог", "Index", "Home")
+                                    </li>*@
                                 <li class='@Html.IsActive("Home", "About")'>
                                     @Html.ActionLink("О нас", "About", "Home")
                                 </li>
@@ -163,17 +176,6 @@
                                                         </a>
                                                     </p>
                                                 </div>
-                                                <div class="offset-top-15">
-                                                    <div>
-                                                        <p class="reveal-inline-block text-small">
-                                                            <a class="text-gray">
-                                                                <span class="unit unit-middle unit-horizontal unit-spacing-xs">
-                                                                    <span class="unit-left"><img src="/images/Layout/icon-04-20x13.png" width="20" height="13" alt="icon" class="img-responsive center-block"></span><span class="unit-body"><span></span></span>
-                                                                </span>
-                                                            </a>
-                                                        </p>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                     </address>
@@ -245,8 +247,6 @@
 
     <div id="map" style="height: 400px; width: 100%"></div>
 
-    <script src="/js/core.min.js"></script>
-    <script src="/js/script.js"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlnsjJLlThhNX_Jc5v3OwwSfSUXRNA49U&callback=initMap">
     </script>
@@ -275,7 +275,7 @@
 
         }
     </script>
-
+    
     @RenderSection("scripts", required: false)
 </body>
 </html>
