--- a/Ocean.Inside.Project/Views/Tour/AddTour.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/AddTour.cshtml
@@ -8,22 +8,30 @@
 
         <div class="form-group form-group-xs">
             <label for="Title" class="form-label">Заголовок</label>
-            <input name="Title" id="Title" class="form-control" type="text" />
+            <input name="Title" id="Title" class="form-control" type="text" value="@Model.Title" />
         </div>
 
         <div class="form-group form-group-xs">
             <label for="Hotel" class="form-label">Отель</label>
-            <input name="Hotel" id="Hotel" class="form-control" type="text" />
+            <input name="Hotel" id="Hotel" class="form-control" type="text" value="@Model.Hotel" />
+        </div>
+
+        <div class="form-group form-group-xs">
+            @*<label for="IsHot" class="label form-label-outside">Горящий??</label>*@
+            @*<input name="IsHot" id="IsHot" type="checkbox" class="checkbox-inline" value="@Model.IsHot" />*@
+            
+            @Html.LabelFor(m => m.IsHot, "Горящий??", new { @class = "label form-label-outside text-big label" })
+            @Html.CheckBoxFor(m => m.IsHot, new { @class = "checkbox checkbox-inline checkbox-inline-right" })
         </div>
 
         <div class="form-group form-group-xs">
             <label for="FlyFrom" class="form-label">Вылет из</label>
-            <input name="FlyFrom" id="FlyFrom" class="form-control" type="text" />
+            <input name="FlyFrom" id="FlyFrom" class="form-control" type="text" value="@Model.FlyFrom" />
         </div>
 
         <div class="form-group form-group-xs">
             <label for="Place" class="form-label">Город пребывания</label>
-            <input name="Place" id="Place" class="form-control" type="text" />
+            <input name="Place" id="Place" class="form-control" type="text" value="@Model.Place" />
         </div>
 
         <div class="form-group form-group-xs">
@@ -33,11 +41,11 @@
 
         <div class="form-group form-group-xs">
             <label for="Duration" class="form-label">Количество дней</label>
-            <input name="Duration" id="Duration" class="form-control" type="text" />
+            <input name="Duration" id="Duration" class="form-control" type="text" value="@Model.Duration" />
         </div>
         <div class="form-group form-group-xs">
             <label for="DurationNights" class="form-label">Количество ночей</label>
-            <input name="DurationNights" id="DurationNights" class="form-control" type="text" />
+            <input name="DurationNights" id="DurationNights" class="form-control" type="text" value="@Model.DurationNights" />
         </div>
         <div class="form-group form-group-xs">
             <label for="Price" class="form-label">Цена</label>
